--- a/manifest.json
+++ b/manifest.json
@@ -16,5 +16,8 @@
  ],
   "background":{
     "scripts": ["background.js"]
-  }
+  },
+  "icons": { "16": "icons/hide16.png",
+           "32": "icons/hide32.png",
+          "128": "icons/webstore-icon.png" }
 }
